--- a/style.css
+++ b/style.css
@@ -1,44 +1,67 @@
 *{
- margin: 0;
- padding: 0;   
+    margin: 0;
+    padding: 0;
 }
 
-header{
-    background-color: #383D58;
-    color: #fff;
+body{
+    font-family: 'Poppins', sans-serif;
+}
+
+.cabeçalho {
+    background-color: #383d58;
+    color: white;
     display: flex;
     justify-content: space-around;
     align-items: center;
-    padding:24px 0;
+    padding: 24px 0;
 }
+
 .cabeçalho-imagem{
-width: 10%;
+    width: 20%;  
 
 }
 .cabeçalho-lista-item{
     display: inline-block;
     margin: 0 16px;
     font-size: 24px;
- }
- .escola{
-background-image: linear-gradient(#424e61,#4ebfe9);
-color: #fff;
-display: flex;
-justify-content: center;
-align-items: center;
-padding:24px 0;
- }
- .escola-diu-conteudo{
-    width:35%;
- }
- .escola-imagem{
-    width:25%;
- }
- .escola-titulo{
-    padding:24px 0;
- }
- .escola-texto-um{
-    padding:24px 0;
+}
+
+.escola-imagem{
+    width: 25%;
+}
+
+.escola{
+    background-image: linear-gradient(#383d58,#4ebfe9);
     color: white;
-    font-size:24px ;
- }
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 24px 0;
+}
+
+.escola-div-conteudo{
+    width: 35%;
+}
+.escola-titulo{
+    padding: 24px;
+}
+.estudante-imagem{
+    width: 150px;
+}
+
+.estudante-icone{
+    width: 26px;
+}
+
+.estudante-div{
+    text-align: center;
+}
+
+.estudante-titulo{
+    text-align: center;
+    padding: 50px 0;
+}
+.estudante-todos{
+    display: grid;
+    grid-template-columns: 20% 20% 20% 20% 20%;
+}
